@@ -7,12 +7,14 @@
 
 	* libfreeipmi/include/freeipmi/spec/oem/ipmi-comp-code-oem-intel-spec.h,
 	libfreeipmi/include/freeipmi/spec/oem/ipmi-event-reading-type-code-oem-intel-spec.h,
-	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-and-event-code-tables-oem-intel-spec.h:
+	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-and-event-code-tables-oem-intel-spec.h,
+	libfreeipmi/include/freeipmi/spec/oem/ipmi-slave-address-oem-intel-spec.h:
 	Splice out motherboard specific extensions into new files.
 
 	* libfreeipmi/include/freeipmi/spec/oem/ipmi-comp-code-oem-intel-s5500wb-spec.h,
 	libfreeipmi/include/freeipmi/spec/oem/ipmi-event-reading-type-code-oem-intel-s5500wb-spec.h,
 	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-and-event-code-tables-oem-intel-s5500wb-spec.h:
+	libfreeipmi/include/freeipmi/spec/oem/ipmi-slave-address-oem-intel-s5500wb-spec.h:
 	New file.
 
 2020-01-08 Albert Chu <chu11@llnl.gov>
